artikAgentFactory/infra/cdk.out.edgefix/artikagentfactory-staging-network.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-vpc"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/Resource"
   }
  },
  "VpcpublicSubnet1Subnet2BB74ED7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/publicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/publicSubnet1/Subnet"
   }
  },
  "VpcpublicSubnet1RouteTable15C15F8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/publicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/publicSubnet1/RouteTable"
   }
  },
  "VpcpublicSubnet1RouteTableAssociation4E83B6E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet1DefaultRouteB88F9E93": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "VpcpublicSubnet1EIP411541E6": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/publicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/publicSubnet1/EIP"
   }
  },
  "VpcpublicSubnet1NATGatewayA036E8A6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcpublicSubnet1EIP411541E6",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/publicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ]
   },
   "DependsOn": [
    "VpcpublicSubnet1DefaultRouteB88F9E93",
    "VpcpublicSubnet1RouteTableAssociation4E83B6E4"
   ],
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/publicSubnet1/NATGateway"
   }
  },
  "VpcpublicSubnet2SubnetE34B022A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/publicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/publicSubnet2/Subnet"
   }
  },
  "VpcpublicSubnet2RouteTableC5A6DF77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/publicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/publicSubnet2/RouteTable"
   }
  },
  "VpcpublicSubnet2RouteTableAssociationCCE257FF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet2SubnetE34B022A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet2DefaultRoute732F0BEB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/publicSubnet2/DefaultRoute"
   }
  },
  "VpcprivateecsSubnet1Subnet80A3EB7D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-ecs"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/private-ecsSubnet1"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-ecsSubnet1/Subnet"
   }
  },
  "VpcprivateecsSubnet1RouteTable16D99FB0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/private-ecsSubnet1"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-ecsSubnet1/RouteTable"
   }
  },
  "VpcprivateecsSubnet1RouteTableAssociationA5DC7593": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateecsSubnet1RouteTable16D99FB0"
    },
    "SubnetId": {
     "Ref": "VpcprivateecsSubnet1Subnet80A3EB7D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-ecsSubnet1/RouteTableAssociation"
   }
  },
  "VpcprivateecsSubnet1DefaultRouteD206BC4C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateecsSubnet1RouteTable16D99FB0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-ecsSubnet1/DefaultRoute"
   }
  },
  "VpcprivateecsSubnet2SubnetCA5ECF90": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-ecs"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/private-ecsSubnet2"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-ecsSubnet2/Subnet"
   }
  },
  "VpcprivateecsSubnet2RouteTable13888436": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/private-ecsSubnet2"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-ecsSubnet2/RouteTable"
   }
  },
  "VpcprivateecsSubnet2RouteTableAssociation5B4D8FCE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateecsSubnet2RouteTable13888436"
    },
    "SubnetId": {
     "Ref": "VpcprivateecsSubnet2SubnetCA5ECF90"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-ecsSubnet2/RouteTableAssociation"
   }
  },
  "VpcprivateecsSubnet2DefaultRoute31E5BA7D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateecsSubnet2RouteTable13888436"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-ecsSubnet2/DefaultRoute"
   }
  },
  "VpcprivatedataSubnet1Subnet9638AA76": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-data"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/private-dataSubnet1"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-dataSubnet1/Subnet"
   }
  },
  "VpcprivatedataSubnet1RouteTable304546DC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/private-dataSubnet1"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-dataSubnet1/RouteTable"
   }
  },
  "VpcprivatedataSubnet1RouteTableAssociationC484D6C4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivatedataSubnet1RouteTable304546DC"
    },
    "SubnetId": {
     "Ref": "VpcprivatedataSubnet1Subnet9638AA76"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-dataSubnet1/RouteTableAssociation"
   }
  },
  "VpcprivatedataSubnet2Subnet85309E02": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-data"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/private-dataSubnet2"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-dataSubnet2/Subnet"
   }
  },
  "VpcprivatedataSubnet2RouteTable4B43529F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-network/Vpc/private-dataSubnet2"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-dataSubnet2/RouteTable"
   }
  },
  "VpcprivatedataSubnet2RouteTableAssociation00B8E4FF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivatedataSubnet2RouteTable4B43529F"
    },
    "SubnetId": {
     "Ref": "VpcprivatedataSubnet2Subnet85309E02"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/private-dataSubnet2/RouteTableAssociation"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-vpc"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/VPCGW"
   }
  },
  "VpcSecretsManagerEndpointSecurityGroup9A5498C7": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "artikagentfactory-staging-network/Vpc/SecretsManagerEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "Vpc8378EB38",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-vpc"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/SecretsManagerEndpoint/SecurityGroup/Resource"
   }
  },
  "VpcSecretsManagerEndpoint93E49F69": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "VpcSecretsManagerEndpointSecurityGroup9A5498C7",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-west-2.secretsmanager",
    "SubnetIds": [
     {
      "Ref": "VpcprivateecsSubnet1Subnet80A3EB7D"
     },
     {
      "Ref": "VpcprivateecsSubnet2SubnetCA5ECF90"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-vpc"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/SecretsManagerEndpoint/Resource"
   }
  },
  "VpcCloudWatchLogsEndpointSecurityGroupE044298A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "artikagentfactory-staging-network/Vpc/CloudWatchLogsEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "Vpc8378EB38",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-vpc"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/CloudWatchLogsEndpoint/SecurityGroup/Resource"
   }
  },
  "VpcCloudWatchLogsEndpointA6195533": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "VpcCloudWatchLogsEndpointSecurityGroupE044298A",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-west-2.logs",
    "SubnetIds": [
     {
      "Ref": "VpcprivateecsSubnet1Subnet80A3EB7D"
     },
     {
      "Ref": "VpcprivateecsSubnet2SubnetCA5ECF90"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-vpc"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/CloudWatchLogsEndpoint/Resource"
   }
  },
  "VpcSqsEndpointSecurityGroup77E600AF": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "artikagentfactory-staging-network/Vpc/SqsEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "Vpc8378EB38",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-vpc"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/SqsEndpoint/SecurityGroup/Resource"
   }
  },
  "VpcSqsEndpointF1A4587A": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "VpcSqsEndpointSecurityGroup77E600AF",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-west-2.sqs",
    "SubnetIds": [
     {
      "Ref": "VpcprivateecsSubnet1Subnet80A3EB7D"
     },
     {
      "Ref": "VpcprivateecsSubnet2SubnetCA5ECF90"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-vpc"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/SqsEndpoint/Resource"
   }
  },
  "VpcS3Endpoint4A3DE4B5": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "VpcprivateecsSubnet1RouteTable16D99FB0"
     },
     {
      "Ref": "VpcprivateecsSubnet2RouteTable13888436"
     },
     {
      "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
     },
     {
      "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
     },
     {
      "Ref": "VpcprivatedataSubnet1RouteTable304546DC"
     },
     {
      "Ref": "VpcprivatedataSubnet2RouteTable4B43529F"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "artikagentfactory-staging-vpc"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/Vpc/S3Endpoint/Resource"
   }
  },
  "AlbSecurityGroup86A59E99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ALB - public entry point",
    "GroupName": "artikagentfactory-staging-alb-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "HTTP from the internet / CloudFront",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/AlbSecurityGroup/Resource"
   }
  },
  "EcsWebSecurityGroup61FA289B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Web tasks - traffic only from the ALB",
    "GroupName": "artikagentfactory-staging-ecs-web-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/EcsWebSecurityGroup/Resource"
   }
  },
  "EcsWebSecurityGroupfromartikagentfactorystagingnetworkAlbSecurityGroup515B80B7842059CE3291": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "From ALB only",
    "FromPort": 8420,
    "GroupId": {
     "Fn::GetAtt": [
      "EcsWebSecurityGroup61FA289B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    },
    "ToPort": 8420
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/EcsWebSecurityGroup/from artikagentfactorystagingnetworkAlbSecurityGroup515B80B7:8420"
   }
  },
  "EcsWorkerSecurityGroup6B970AC6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Worker tasks - no inbound needed",
    "GroupName": "artikagentfactory-staging-ecs-worker-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/EcsWorkerSecurityGroup/Resource"
   }
  },
  "DbSecurityGroupE9D701AD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "RDS - private, ECS tasks only",
    "GroupName": "artikagentfactory-staging-db-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Project",
      "Value": "artikAgentFactory"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/DbSecurityGroup/Resource"
   }
  },
  "DbSecurityGroupfromartikagentfactorystagingnetworkEcsWebSecurityGroup12B7AA195432F144AC99": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Web tasks to Postgres",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "DbSecurityGroupE9D701AD",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "EcsWebSecurityGroup61FA289B",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/DbSecurityGroup/from artikagentfactorystagingnetworkEcsWebSecurityGroup12B7AA19:5432"
   }
  },
  "DbSecurityGroupfromartikagentfactorystagingnetworkEcsWorkerSecurityGroupA13E4FEC54322C9F9077": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Worker tasks to Postgres",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "DbSecurityGroupE9D701AD",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "EcsWorkerSecurityGroup6B970AC6",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/DbSecurityGroup/from artikagentfactorystagingnetworkEcsWorkerSecurityGroupA13E4FEC:5432"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/12QQYvCMBCFf8ve07hbwbuISC9LaMWrpOOos9ZJSSZKEf+7qbpWPM2bjzePx+Q6n4z195c9hww2h6yhWl8qsXBQCa0Rcn1ZtaBmW16ZmTKxbgiqWDNKzwZVuii4tHWDAx/YNAQHZIUcv8y9mBemH79WFlbwbDtlPJ2SHIILFvRJ/xseTZ7bVFLV/RFZ1N23tYCp7pw3raMEK4ToSbqFd7G9F/sEKevlfoa+B3yeFLzzGMJVlRhc9IBXZTrZOx6N9U//yL9AlPnIQkfU5WPeAJ1saNxlAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "artikagentfactory-staging-network/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefVpcprivatedataSubnet1Subnet9638AA76576225C8": {
   "Value": {
    "Ref": "VpcprivatedataSubnet1Subnet9638AA76"
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputRefVpcprivatedataSubnet1Subnet9638AA76576225C8"
   }
  },
  "ExportsOutputRefVpcprivatedataSubnet2Subnet85309E021EB0F8E3": {
   "Value": {
    "Ref": "VpcprivatedataSubnet2Subnet85309E02"
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputRefVpcprivatedataSubnet2Subnet85309E021EB0F8E3"
   }
  },
  "ExportsOutputFnGetAttDbSecurityGroupE9D701ADGroupId7A7C114A": {
   "Value": {
    "Fn::GetAtt": [
     "DbSecurityGroupE9D701AD",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputFnGetAttDbSecurityGroupE9D701ADGroupId7A7C114A"
   }
  },
  "ExportsOutputRefVpcprivateecsSubnet1Subnet80A3EB7DFEA0F1DC": {
   "Value": {
    "Ref": "VpcprivateecsSubnet1Subnet80A3EB7D"
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputRefVpcprivateecsSubnet1Subnet80A3EB7DFEA0F1DC"
   }
  },
  "ExportsOutputRefVpcprivateecsSubnet2SubnetCA5ECF90A162717E": {
   "Value": {
    "Ref": "VpcprivateecsSubnet2SubnetCA5ECF90"
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputRefVpcprivateecsSubnet2SubnetCA5ECF90A162717E"
   }
  },
  "ExportsOutputFnGetAttEcsWebSecurityGroup61FA289BGroupIdFC8BDB14": {
   "Value": {
    "Fn::GetAtt": [
     "EcsWebSecurityGroup61FA289B",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputFnGetAttEcsWebSecurityGroup61FA289BGroupIdFC8BDB14"
   }
  },
  "ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7": {
   "Value": {
    "Fn::GetAtt": [
     "AlbSecurityGroup86A59E99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7"
   }
  },
  "ExportsOutputRefVpcpublicSubnet1Subnet2BB74ED74EB42ADC": {
   "Value": {
    "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputRefVpcpublicSubnet1Subnet2BB74ED74EB42ADC"
   }
  },
  "ExportsOutputRefVpcpublicSubnet2SubnetE34B022AC8BB6627": {
   "Value": {
    "Ref": "VpcpublicSubnet2SubnetE34B022A"
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputRefVpcpublicSubnet2SubnetE34B022AC8BB6627"
   }
  },
  "ExportsOutputRefVpc8378EB38272D6E3A": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputRefVpc8378EB38272D6E3A"
   }
  },
  "ExportsOutputFnGetAttEcsWorkerSecurityGroup6B970AC6GroupId30E0C8D8": {
   "Value": {
    "Fn::GetAtt": [
     "EcsWorkerSecurityGroup6B970AC6",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "artikagentfactory-staging-network:ExportsOutputFnGetAttEcsWorkerSecurityGroup6B970AC6GroupId30E0C8D8"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
